加入原始 URL 二维码显示

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   <div class="content-container">
     <article class="current-article">
       <h1 class="current-article__title"></h1>
+      <section class="current-article__qrcode">
+      </section>
       <section class="current-article__content">
       </section>
     </article>
