修正注释中的 CSS 类名笔误

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </section>
       <ul class="article-nav__sites">
-        <!-- <li class="article-nav__sites_site"></li> -->
+        <!-- <li class="article-nav__sites__site"></li> -->
       </ul>
     </aside>
     <footer class="screen-footer">
