加入动画逻辑

--- a/index.html
+++ b/index.html
@@ -54,14 +54,20 @@
 
     <aside class="article-nav">
       <section class="article-nav__current-site">
-        <h2 class="current-site__site-name"></h2>
-        <ul class="current-site__news-items">
-          <!-- <li class="current-site__news-items__item"></li> -->
-        </ul>
+        <div class="current-site__site-name-container">
+          <h2 class="current-site__site-name"></h2>
+        </div>
+        <div class="current-site__news-items-container">
+          <ul class="current-site__news-items">
+            <!-- <li class="current-site__news-items__item"></li> -->
+          </ul>
+        </div>
       </section>
-      <ul class="article-nav__sites">
-        <!-- <li class="article-nav__sites__site"></li> -->
-      </ul>
+      <div class="article-nav__sites-container">
+        <ul class="article-nav__sites">
+          <!-- <li class="article-nav__sites__site"></li> -->
+        </ul>
+      </div>
     </aside>
     <footer class="screen-footer">
       &copy; 2014 江南听雨网.
