让当前站点名称元素初始化时即占据一定高度

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <aside class="article-nav">
       <section class="article-nav__current-site">
         <div class="current-site__site-name-container">
-          <h2 class="current-site__site-name"></h2>
+          <!-- 在程序取得第一组文章之前也撑满元素高度 -->
+          <h2 class="current-site__site-name">&nbsp;</h2>
         </div>
         <div class="current-site__news-items-container">
           <ul class="current-site__news-items">
