--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </aside>
     <footer class="screen-footer">
       &copy; 2014 江南听雨网.
-      本页使用了正版<a href="http://makefont.com">造字工房</a>悦黑字体.
+      本页使用了正版<a href="http://makefont.com">造字工房</a>字体.
     </footer>
   </div>
 </div>
