加入环形文章显示进度指示器; 调整二维码和标题显示
* 二维码位置恢复到文章区域最上方
* 为节约空间, 使环形指示器位于二维码中央
* 取消标题右内边距

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
       </section>
       <section class="current-article__content">
       </section>
+      <div class="current-article__timer-container">
+        <div class="current-article__timer"
+          data-width="45"
+          data-height="45"
+          data-displayInput="false"
+          data-readOnly="true"
+          data-fgColor="#2a1710"
+          data-bgColor="#efd984"
+          >
+        </div>
+      </div>
     </article>
 
     <aside class="article-nav">
