让进度环底色透明

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           data-displayInput="false"
           data-readOnly="true"
           data-fgColor="#2a1710"
-          data-bgColor="#efd984"
+          data-bgColor="transparent"
           >
         </div>
       </div>
