--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
       </section>
       <h1 class="current-article__title"></h1>
+      <span class="current-article__time"></span>
       <section class="current-article__content">
       </section>
     </article>
