让 oldIE 跳转到兼容性提示页面

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="description" content="江南听雨网信息发布平台餐厅墙项目">
   <meta name="author" content="JNRain">
 
+  <!-- kill IE -->
+  <!--[if IE]>
+  <script>location.href = "http://static.jnrain.com/web/no-ie/";</script>
+  <![endif]-->
+
   <!-- styles -->
   <link rel="stylesheet" href="http://static.jnrain.com/common/css/normalize.css" />
   <link rel="stylesheet" href="http://static.jnrain.com/common/css/reset.css" />
