去掉 CSS 资源的 http 协议前缀

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <![endif]-->
 
   <!-- styles -->
-  <link rel="stylesheet" href="http://static.jnrain.com/common/css/normalize.css" />
-  <link rel="stylesheet" href="http://static.jnrain.com/common/css/reset.css" />
-  <link rel="stylesheet" href="http://static.jnrain.com/common/css/clear.css" />
+  <link rel="stylesheet" href="//static.jnrain.com/common/css/normalize.css" />
+  <link rel="stylesheet" href="//static.jnrain.com/common/css/reset.css" />
+  <link rel="stylesheet" href="//static.jnrain.com/common/css/clear.css" />
+  <link rel="stylesheet" href="//static.jnrain.com/common/css/font-awesome.css" />
 
   <link rel="stylesheet" href="css/ctwall.css" />
 
