替换版权信息中的造字工房名称为 logo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </aside>
     <footer class="screen-footer">
       &copy; 2014 江南听雨网.
-      本页应用的雅圆字体由<a href="http://makefont.com">造字工房</a>提供.
+      本页应用的雅圆字体由<a href="http://makefont.com"><i class="makefont-logo"></i></a>提供.
     </footer>
   </div>
 </div>
