显示最近请求完成时间

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       <span class="current-article__time"></span>
       <section class="current-article__content">
       </section>
+
+      <div class="bottom-overlay last-fetch-time">
+      </div>
+
       <div class="load-error-outer-container">
         <div class="load-error-middle-container">
           <div class="load-error-inner-container">
@@ -102,7 +106,7 @@
         </ul>
       </div>
     </aside>
-    <footer class="screen-footer">
+    <footer class="screen-footer bottom-overlay">
       &copy; 2014 江南听雨网.
       本页应用的雅圆字体由<a href="http://makefont.com"><i class="makefont-logo"></i></a>提供.
     </footer>
