添加请求进行中的视觉提示

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <span class="screen-header__logo__title">江南听雨网</span>
       <span class="screen-header__logo__subtitle">校内信息服务频道</span>
     </div>
+
     <div class="screen-header__datetime">
       <span class="datetime__time">
         <span class="datetime__time__hour"></span>
@@ -42,6 +43,13 @@
         <span class="datetime__date__day"></span>
       </span>
       <span class="datetime__weekday"></span>
+    </div>
+
+    <div class="header-middle-container">
+      <div class="loading-indicator">
+        <i class="loading-indicator__icon fa fa-spinner"></i>
+        正在加载最新信息
+      </div>
     </div>
   </header>
 
