在当前站点名称右侧添加一个右三角箭头图标

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <div class="current-site__site-name-container">
           <!-- 在程序取得第一组文章之前也撑满元素高度 -->
           <h2 class="current-site__site-name">&nbsp;</h2>
+          <i class="current-site__site-name__arrow fa fa-caret-right"></i>
         </div>
         <div class="current-site__news-items-container">
           <ul class="current-site__news-items">
