去掉一个没有用到的类名

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <h2 class="load-error__title">频道后台繁忙</h2>
                 </header>
                 <p>服务器没有及时返回新鲜的文章数据供显示。</p>
-                <p class="load-error__wait-msg">将于 <span class="load-error__retry-in"></span> 秒后尝试重新请求。</p>
+                <p>将于 <span class="load-error__retry-in"></span> 秒后尝试重新请求。</p>
               </div>
             </div>
           </div>
