更新 meta description 描述

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>江南听雨餐厅墙</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="江南听雨网信息发布平台餐厅墙项目">
+  <meta name="description" content="江南听雨网校内信息服务频道餐厅墙项目">
   <meta name="author" content="JNRain">
 
   <!-- kill IE -->
